_sass/blocks/vita.scss
/* Vita
############################################################################ */

.vita {
  background-color: var(--lightest);

  &-body {
    padding: var(--fluid-space-l);

    h2 {
      color: var(--teal);
    }

    dt {
      display: inline-block;
      color: var(--darkest);
      opacity: 1;

      &::after {
        content: none;
      }
    }

    dd {
      display: inline;
      margin-top: var(--fluid-space-xs);

      &::after {
        display: block;
        height: 1px;
        padding: 0;
        margin: 0;
        clear: both;
        content: "";
      }
    }

    dd+dt {
      margin-top: var(--fluid-space-xs);
    }
  }

  &-visual {
    margin: 0;
    height: 100%;

    &>img {
      height: 0;
      min-height: 100%;
      object-fit: cover;
      object-position: top;
    }
  }

  @media only screen and (min-width: $vp-large) {
    display: grid;
    align-items: center;
    grid-template-columns: 1fr 1fr;
  }
}

